<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:clipToPadding="false"
    android:paddingTop="@dimen/padding_top"
    android:paddingBottom="@dimen/padding_bottom"
    android:paddingStart="@dimen/padding_start"
    android:paddingEnd="@dimen/padding_end">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_bottom"
        android:src="@drawable/ic_logo"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_med"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/info_4"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_edit"
        android:nextFocusDown="@id/edit_email"
        android:background="@color/white"
        android:gravity="center"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:orientation="vertical"
        android:elevation="@dimen/elevation">

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textCursorDrawable="@null"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/text_med"
            android:textColorHint="@color/blue"
            android:inputType="phone"
            android:hint="@string/label_phone"/>

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_edit"
        android:nextFocusDown="@id/button_order"
        android:background="@color/white"
        android:gravity="center"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:orientation="vertical"
        android:elevation="@dimen/elevation">

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textCursorDrawable="@null"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/text_med"
            android:textColorHint="@color/blue"
            android:inputType="textEmailAddress"
            android:hint="@string/label_email"/>

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/button_order"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button"
        android:elevation="@dimen/elevation"
        android:padding="@dimen/padding_button"
        android:background="@color/blue">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="1sp"
            app:autoSizeMaxTextSize="200sp"
            app:autoSizeStepGranularity="1sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:text="@string/label_order"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>