<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:clipToPadding="false"
    android:paddingTop="@dimen/padding_top"
    android:paddingBottom="@dimen/padding_bottom"
    android:paddingStart="@dimen/padding_start"
    android:paddingEnd="@dimen/padding_end">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_med"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/info_1"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_small"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/info_2"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Spinner
        android:id="@+id/spinner_services"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_edit"
        android:elevation="@dimen/elevation"
        android:background="@drawable/background_spinner"
        android:spinnerMode="dropdown"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        tools:context=".MainActivity"
        android:name="com.google.android.gms.maps.SupportMapFragment" />

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@+id/button_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button"
        android:elevation="@dimen/elevation"
        android:padding="@dimen/padding_button"
        android:background="@color/blue">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="1sp"
            app:autoSizeMaxTextSize="200sp"
            app:autoSizeStepGranularity="1sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:text="@string/label_next"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>